welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:21: error: not found: value i
  recule(getMondeHauteur()-i)
                           ^